# $Id: ChangeLog,v 1.156 2005/10/05 09:58:35 pox Exp $

Griffith ChangeLog
------------------
(c) 2005 Vasco Nunes

2005-10-09  Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5306] Last toolbar button not working as expected

2005-10-05  Piotr Ozarowski <ozarow@gmail.com>
	* Polish translation updated

2005-10-05  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Poster viewer events changed to only show full poster when entering/leaving zoom button
	* Delete/Zoom poster buttons are now sensitive to poster existence
	* Portuguese translation updated

2005-10-04  Piotr Ozarowski <ozarow@gmail.com>
	* Griffith now asks if you want to loan whole collection

2005-10-01  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Moved all movie plugins logos to a new optional package (griffith_extra_artwork module on cvs)
	* Added some tooltips to preferences widgets
	* Added some new tools to operate with posters (initial support)

2005-09-30  Piotr Ozarowski <ozarow@gmail.com>
	* Volumes / Collections feature now in beta2 version (loaning is
	  working, some bugfixes)
	* Some cleanups in Debian files

2005-09-26  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added bulgarian translation (thanks to Luchezar P. Petkov)

2005-09-27  Piotr Ozarowski <ozarow@gmail.com>
	* Volumes / Collections feature now in beta version (filtering is
	  working, minor bugfixes)

2005-09-26  Piotr Ozarowski <ozarow@gmail.com>
	* Volumes / Collections feature added (alpha version)

2005-09-26  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a debug method to urlretrieve calls 
	* Added new XML export plugin
	* Renamed Export With Templates plugin to HTML export plugin
	* Fixed bug with tabs not being striped on director data on ClubeMyDVD movie plugin

2005-09-23  Vasco Nunes <vasco.m.nunes@gmail.com>
	* DVDZone2 plugin renamed to Mediadis according to new company service and website. Some enhancement to this plugin implemented.

2005-09-21  Piotr Ozarowski <ozarow@gmail.com>
	* Added Tanuki-Anime movie plugin.