@@ -705,8 +705,9 @@ Year</property>
 	  </child>
 
 	  <child>
-	    <widget class="GtkComboBoxEntry" id="filter_collections">
+	    <widget class="GtkComboBoxEntry" id="f_col">
 	      <property name="visible">True</property>
+	      <property name="items" translatable="yes"></property>
 	      <property name="add_tearoffs">False</property>
 	      <property name="has_frame">True</property>
 	      <property name="focus_on_click">True</property>
